--- a/account-service-dev.yaml
+++ b/account-service-dev.yaml
@@ -1,31 +1,62 @@
+server:
+  port: 8082
+
 spring:
+  application:
+    name: account-service
+
+  datasource:
+    url: jdbc:postgresql://postgres:5432/bankingapp
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-      #properties:
-    #hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-service
+      enabled: true
 
   kafka:
-    bootstrap-servers: localhost:9092
-
-  datasource:
-    driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/training
-    username: postgres
-    password: Cloud@123$
+    bootstrap-servers: kafka:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      group-id: account-service
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: com.blueyonder.bankingapp.model
 
 eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
-server:
-  port: 7075
+      defaultZone: http://registry-service:8761/eureka/
+  instance:
+    prefer-ip-address: true
+
+logging:
+  level:
+    org.springframework.boot.devtools: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
 management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: "*"  # Expose all Actuator endpoints
+  endpoint:
+    health:
+      show-details: always
