--- a/account-service-docker.yml
+++ b/account-service-docker.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8081
+  port: 8082
 
 spring:
   application:
-    name: auth-service
+    name: account-service
 
   config:
     import: "optional:configserver:http://config-service:8888"
@@ -20,13 +20,25 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-
   cloud:
     config:
       discovery:
         enabled: true
         service-id: config-service
       enabled: true
+
+  kafka:
+    bootstrap-servers: kafka:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      group-id: account-service
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: com.blueyonder.bankingapp.model
 
 eureka:
   client:
@@ -37,8 +49,11 @@ eureka:
   instance:
     prefer-ip-address: true
 
-jwt:
-  secret: helloeveryoneiamyogeshkumarandthisismysecretkey
+logging:
+  level:
+    org.springframework.boot.devtools: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
 management:
   endpoints:
