--- a/notification-service-docker.yml
+++ b/notification-service-docker.yml
@@ -1,12 +1,33 @@
 server:
-  port: 8081
+  port: 8085
 
 spring:
   application:
-    name: auth-service
+    name: notification-service
+
+  devtools:
+    restart:
+      poll-interval: 2s
+      quiet-period: 1s
 
   config:
     import: "optional:configserver:http://config-service:8888"
+
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-service
+
+  kafka:
+    bootstrap-servers: kafka:9092
+    consumer:
+      group-id: notification-service
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: com.blueyonder.bankingapp.model
 
   datasource:
     url: jdbc:postgresql://postgres:5432/bankingapp
@@ -18,27 +39,13 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: config-service
-      enabled: true
 
 eureka:
   client:
-    register-with-eureka: true
-    fetch-registry: true
     service-url:
       defaultZone: http://registry-service:8761/eureka/
   instance:
     prefer-ip-address: true
-
-jwt:
-  secret: helloeveryoneiamyogeshkumarandthisismysecretkey
 
 management:
   endpoints:
