--- a/config-service-docker.yaml
+++ b/config-service-docker.yaml
@@ -1,4 +1,4 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://registry-service:8761/eureka
