account service test

--- a/account-service.yaml
+++ b/account-service.yaml
@@ -2,11 +2,9 @@ server:
   port: 8082
 
 spring:
-  application:
-    name: account-service
 
   datasource:
-    url: jdbc:postgresql://postgres:5432/bankingapp
+    url: jdbc:://localhost:5432/bankingapp
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -17,15 +15,8 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: config-service
-      enabled: true
-
   kafka:
-    bootstrap-servers: kafka:9092
+    bootstrap-servers: localhost:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -39,10 +30,8 @@ spring:
 
 eureka:
   client:
-    register-with-eureka: true
-    fetch-registry: true
     service-url:
-      defaultZone: http://registry-service:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
 
