--- a/account-service-docker.yml
+++ b/account-service-docker.yml
@@ -2,14 +2,9 @@ server:
   port: 8082
 
 spring:
-  application:
-    name: account-service
-
-  config:
-    import: "optional:configserver:http://config-service:8888"
 
   datasource:
-    url: jdbc:postgresql://postgres:5432/bankingapp
+    url: jdbc:://postgres:5432/bankingapp
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -19,13 +14,6 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: config-service
-      enabled: true
 
   kafka:
     bootstrap-servers: kafka:9092
@@ -42,8 +30,6 @@ spring:
 
 eureka:
   client:
-    register-with-eureka: true
-    fetch-registry: true
     service-url:
       defaultZone: http://registry-service:8761/eureka/
   instance:
