--- a/account-service-docker.yml
+++ b/account-service-docker.yml
@@ -4,7 +4,7 @@ server:
 spring:
 
   datasource:
-    url: jdbc:://postgres:5432/bankingapp
+    url: jdbc:postgresql://postgres:5432/bankingapp
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
