--- a/account-service.yaml
+++ b/account-service.yaml
@@ -4,7 +4,7 @@ server:
 spring:
 
   datasource:
-    url: jdbc:://localhost:5432/bankingapp
+    url: jdbc:postgresql://localhost:5432/bankingapp
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
