--- a/auth-service.yml
+++ b/auth-service.yml
@@ -1,15 +1,8 @@
 server:
   port: 8081
 
-spring:
-  application:
-    name: auth-service
-
-  config:
-    import: "optional:configserver:http://config-service:8888"
-
   datasource:
-    url: jdbc:postgresql://postgres:5432/bankingapp
+    url: jdbc:postgresql://localhost:5432/bankingapp
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -20,20 +13,10 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: config-service
-      enabled: true
-
 eureka:
   client:
-    register-with-eureka: true
-    fetch-registry: true
     service-url:
-      defaultZone: http://registry-service:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
 
