gateway service test 2

--- a/gateway-service-docker.yml
+++ b/gateway-service-docker.yml
@@ -61,6 +61,8 @@ eureka:
   instance:
     prefer-ip-address: true
 
+jwt:
+  secret: helloeveryoneiamyogeshkumarandthisismysecretkey
 
 logging:
   level:
