--- a/transaction-service.yml
+++ b/transaction-service.yml
@@ -1,35 +1,44 @@
+server:
+  port: 8083
+
 spring:
-  application:
-    name: transaction-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/bankingapp
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
 
-  devtools:
-    restart:
-      poll-interval: 2s
-      quiet-period: 1s
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-  config:
-    import: "optional:configserver:"
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: config-service
-      enabled: true
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      group-id: transaction-service
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: com.blueyonder.bankingapp.model
 
 eureka:
   client:
-    register-with-eureka: true
-    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
 
-logging:
-  level:
-    #    root: WARN
-    #    com.blueyonder.bankingapp: INFO
-    #    org.springframework: WARN
-    #    org.hibernate: WARN
-    org.springframework.boot.devtools: DEBUG
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+#logging:
+#  level:
+#    org.springframework.boot.devtools: DEBUG
+#  pattern:
+#    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
 management:
   endpoints:
