--- a/fund-transfer-service.yaml
+++ b/fund-transfer-service.yaml
@@ -1,30 +1,48 @@
+server:
+  port: 8084
 spring:
-  application:
-    name: fund-transfer-service
 
-  devtools:
-    restart:
-      poll-interval: 2s
-      quiet-period: 1s
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      group-id: fund-transfer-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: com.blueyonder.bankingapp.model
 
-  config:
-    import: "optional:configserver:"
 
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: config-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/bankingapp
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
 
-logging:
-  level:
-    #    root: WARN
-    #    com.blueyonder.bankingapp: INFO
-    #    org.springframework: WARN
-    #    org.hibernate: WARN
-    org.springframework.boot.devtools: DEBUG
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+eureka:
+  client:
+    service-url:
+      defualtZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
+
+#logging:
+#  level:
+#    #    root: WARN
+#    #    com.blueyonder.bankingapp: INFO
+#    #    org.springframework: WARN
+#    #    org.hibernate: WARN
+#    org.springframework.boot.devtools: DEBUG
+#  pattern:
+#    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
 management:
   endpoints:
