--- a/notification-service-docker.yml
+++ b/notification-service-docker.yml
@@ -2,16 +2,11 @@ server:
   port: 8085
 
 spring:
-  application:
-    name: notification-service
 
-  devtools:
-    restart:
-      poll-interval: 2s
-      quiet-period: 1s
-
-  config:
-    import: "optional:configserver:http://config-service:8888"
+#  devtools:
+#    restart:
+#      poll-interval: 2s
+#      quiet-period: 1s
 
   cloud:
     config:
