--- a/admin-service.yml
+++ b/admin-service.yml
@@ -1,19 +1,14 @@
-spring:
-  application:
-    name: admin-service
-  config:
-    import: "optional:configserver:"
-
-  cloud:
-    config:
-      discovery:
-        service-id: config-service
-        enabled: true
+server:
+  port: 8090
 
 eureka:
   client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+  instance:
+    prefer-ip-address: true
 
 spring.boot.admin:
   discovery:
@@ -28,7 +23,7 @@ management:
     health:
       show-details: always
 
-logging:
-  level:
-    de.codecentric.boot.admin: DEBUG
-    org.springframework.cloud: DEBUG
+#logging:
+#  level:
+#    de.codecentric.boot.admin: DEBUG
+#    org.springframework.cloud: DEBUG
