--- a/config-service-docker.yaml
+++ b/config-service-docker.yaml
@@ -2,3 +2,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://registry-service:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"  # Expose all Actuator endpoints
+  endpoint:
+    health:
+      show-details: always
