--- a/registry-service.yaml
+++ b/registry-service.yaml
@@ -2,3 +2,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"  # Enable health endpoint
+  endpoint:
+    health:
+      show-details: always
