--- a/config-service.yaml
+++ b/config-service.yaml
@@ -3,8 +3,8 @@ server:
 
 eureka:
   client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
   instance:
     prefer-ip-address: true
 
