--- a/notification-service-docker.yml
+++ b/notification-service-docker.yml
@@ -25,7 +25,7 @@ spring:
         spring.json.trusted.packages: com.blueyonder.bankingapp.model
 
   datasource:
-    url: jdbc:postgresql://postgres:5432/bankingapp
+    url: jdbc:postgresql://notification-db:5432/notification_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
