--- a/auth-service-docker.yml
+++ b/auth-service-docker.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:5432/bankingapp
+    url: jdbc:postgresql://auth-db:5432/auth_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
