--- a/fund-transfer-service-docker.yml
+++ b/fund-transfer-service-docker.yml
@@ -17,7 +17,7 @@ spring:
 
 
   datasource:
-    url: jdbc:postgresql://postgres:5432/bankingapp
+    url: jdbc:postgresql://fund-transfer-db:5432/fund_transfer_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
