--- a/transaction-service-docker.yml
+++ b/transaction-service-docker.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:5432/bankingapp
+    url: jdbc:postgresql://transaction-db:5432/transaction_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
