--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -41,12 +41,20 @@ spring:
           filters:
             - StripPrefix=2
 
-        - id: auth-service
+        - id: auth-service-public
           uri: lb://auth-service
           predicates:
-            - Path=/bankingapp/api/auth/**
+            - Path=/bankingapp/api/auth/login, /bankingapp/api/auth/signup, /bankingapp/api/auth/adminlogin
           filters:
             - StripPrefix=2
+
+        - id: auth-service-secure
+          uri: lb://auth-service
+          predicates:
+            - Path=/bankingapp/api/auth/user
+          filters:
+            - StripPrefix=2
+            - name: JwtFilter
 
 
 #  devtools:
