--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -4,6 +4,18 @@ server:
 spring:
   cloud:
     gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]': # Applies to all routes
+            allowedOrigins: "http://localhost:5173" # Frontend origin
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+            allowedHeaders: "*"
+            allowCredentials: true
+
       discovery:
         locator:
           enabled: true
