--- a/gateway-service-docker.yml
+++ b/gateway-service-docker.yml
@@ -7,7 +7,7 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]': # Applies to all routes
-            allowedOrigins: "http://localhost:5174" # Frontend origin
+            allowedOrigins: "http://bankingapp-ui:80" # Frontend origin
             allowedMethods:
               - GET
               - POST
