--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -7,7 +7,9 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]': # Applies to all routes
-            allowedOrigins: "http://localhost:5174" # Frontend origin
+            allowedOrigins:
+              - "http://bankingapp-ui:3000" # Frontend origin
+              - "http://localhost:3000"
             allowedMethods:
               - GET
               - POST
